# restGDFweb

./: README.md  main.py  pyproject.toml
src/: restGDF.py  utils.py
templates/: index.html
templates/components/: base.html  map.html  mapview.html  navbar.html  viewsframe.html
